# CataclysmDNS

./: .env.example  .gitignore  README.md  cli.py  config.py  pyproject.toml  requirements.txt  setup.py
core/: __init__.py  brute_force.py  cache_base.py  cache_config.py  cache_manager.py  cache_types.py  dnssec_checker.py  exceptions.py  monitoring.py  passive_recon.py  passive_recon_cached.py  proxy_manager.py  rate_limiter.py  resolver.py  resolver_cached.py  resolver_core.py  resolver_enhanced.py  takeover_detector.py  zone_transfer.py
logs/: dns_operations.json  dns_operations.log.size
tests/: test_resolver.py
utils/: __init__.py  enhanced_logger.py  log_cleaner.py  logger.py  logger_config.py  retry_handler.py  wordlist_loader.py
wordlists/: exemplo.txt
